--- a/src/app/customUI/dialogs/change-password/change-password.component.html
+++ b/src/app/customUI/dialogs/change-password/change-password.component.html
@@ -14,7 +14,7 @@
 
           <div class="form-group">
             <label for="old password">Old Password</label>
-            <input type="password" class="form-control" id="email" placeholder="************" [(ngModel)]="oldPassword"
+            <input type="password" class="form-control" id="email" placeholder="" [(ngModel)]="oldPassword"
               [ngModelOptions]="{standalone: true}">
           </div>
 
