--- a/src/app/views/rearrange-items-layouts/agent-detail-item-rearrange/agent-detail-item-rearrange.component.html
+++ b/src/app/views/rearrange-items-layouts/agent-detail-item-rearrange/agent-detail-item-rearrange.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid nospace">
   <div class="container nav-bg">
     <div class="row">
-      <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt=""></div>
+      <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
       <div class="col-xs-7 text-center">
         <h1 class="t-agent">Agent Detail Module Layout</h1>
       </div>
