--- a/src/app/customUI/dialogs/assigned-to/assigned-to.component.html
+++ b/src/app/customUI/dialogs/assigned-to/assigned-to.component.html
@@ -16,10 +16,12 @@
         </div>
 
         <div class="col-xs-12 col-md-12 noPadding">
-          <div class="checkbox">
-            <input id="checkbox1" type="checkbox">
-            <label class="rememberM" for="checkbox1" (change)="dontShowAgainChanged($event)">Don't show me again</label>
-          </div>
+
+            <label class="containerBoxCustom">Don't show me again
+                <input type="checkbox" [(ngModel)]="isDontShowChecked" (change)="dontShowAgainChanged($event)"
+                  [ngModelOptions]="{standalone: true}">
+                <span class="checkmarkCustom"></span>
+              </label>
         </div>
 
         <div class="clear paddingTop10"></div>
