--- a/src/app/views/agent/agent-notes/agent-notes.component.html
+++ b/src/app/views/agent/agent-notes/agent-notes.component.html
@@ -7,9 +7,9 @@
         <div class="col-xs-7 text-center">
           <h1 class="t-agent">Notes</h1>
         </div>
-        <div class="col-xs-3 text-center tpad"><img src="../../../../images/add_new.svg" alt=""><br><span
-            class="edit-detail"><a data-toggle="modal" data-target="#addNewNotes">Add
-              New</a></span></div>
+        <div class="col-xs-3 text-center tpad"><a data-toggle="modal" data-target="#addNewNotes"><img
+              src="../../../../images/add_new.svg" alt=""><br><span class="edit-detail">Add
+              New</span></a></div>
       </div>
     </div>
     <app-entity-name-header [entityModel]="entityModel"></app-entity-name-header>
