--- a/src/app/views/dashboard/agent-under-plan/agent-under-plan.component.html
+++ b/src/app/views/dashboard/agent-under-plan/agent-under-plan.component.html
@@ -38,6 +38,6 @@
   </div>
   <!-- <div id="ratioView">{{totalAndCurrentRowsRatio}}</div> -->
 
-  <button (click)="topFunction()" id="myBtn" title="Go to top"><span
-      class="glyphicon glyphicon-arrow-up"></span></button>
+  <!-- <button (click)="topFunction()" id="myBtn" title="Go to top"><span
+      class="glyphicon glyphicon-arrow-up"></span></button> -->
 </div>
