--- a/src/app/views/dashboard/search/search.component.html
+++ b/src/app/views/dashboard/search/search.component.html
@@ -47,8 +47,8 @@
 
           </li>
         </ul>
-        <button (click)="topFunction()" id="myBtn" title="Go to top"><span
-            class="glyphicon glyphicon-arrow-up"></span></button>
+        <!-- <button (click)="topFunction()" id="myBtn" title="Go to top"><span
+            class="glyphicon glyphicon-arrow-up"></span></button> -->
         <div class="row marginBottom20" *ngIf="moreDataAvailable">
           <div class="col-xs-12 col-md-12 loadMoreWp">
             <hr />
