--- a/src/app/views/dashboard/agent-with-alert/agent-with-alert.component.html
+++ b/src/app/views/dashboard/agent-with-alert/agent-with-alert.component.html
@@ -57,7 +57,7 @@
 
 
 
-    <button (click)="topFunction()" id="myBtn" title="Go to top"><span class="glyphicon glyphicon-arrow-up"></span></button>
+    <!-- <button (click)="topFunction()" id="myBtn" title="Go to top"><span class="glyphicon glyphicon-arrow-up"></span></button> -->
 
 
   </div>
