--- a/src/app/views/dashboard/favorites/favorites.component.html
+++ b/src/app/views/dashboard/favorites/favorites.component.html
@@ -31,6 +31,6 @@
     </div>
   </div>
   <!-- <div id="ratioView">{{totalAndCurrentRowsRatio}}</div> -->
-  <button (click)="topFunction()" id="myBtn" title="Go to top"><span
-      class="glyphicon glyphicon-arrow-up"></span></button>
+  <!-- <button (click)="topFunction()" id="myBtn" title="Go to top"><span
+      class="glyphicon glyphicon-arrow-up"></span></button> -->
 </div>
