--- a/src/app/views/dashboard/top-agents/top-agents.component.html
+++ b/src/app/views/dashboard/top-agents/top-agents.component.html
@@ -5,26 +5,28 @@
         <div class="col-xs-12 col-md-6 cell-bg">
           <div class="agent-detail">
             <div class="dp">
-              <img src="../../../../images/baseline-business-24px.svg" onerror="this.src='../../../../images/placeholder.png'"
-                (click)="onAgentClick(item)" />
-                <div class="dpProfile_wp proActiBg">{{item.stat}}</div>
+              <img src="../../../../images/baseline-business-24px.svg"
+                onerror="this.src='../../../../images/placeholder.png'" (click)="onAgentClick(item)" />
+              <div class="dpProfile_wp proActiBg">{{item.stat}}</div>
             </div>
             <h4 class="topAgentsName"><a (click)="onAgentClick(item)">{{item.name}}</a>
               <span (click)="onAgentClick(item)"> ({{item.entityId}})</span>
               <div class="clearfix paddingTop10"></div>
-               <span>{{getAddress(item)}}</span>
-              </h4>
-              <a class="favouritIconPosition"><img src="{{checkEntityFavorite(item)?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}"
+              <span>{{getAddress(item)}}</span>
+            </h4>
+            <a class="favouritIconPosition"><img
+                src="{{checkEntityFavorite(item)?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}"
                 alt="" (click)="onStarClick(item)"></a>
-            
-                  
+
+
             <div class="clearfix"></div>
             <div class="row" (click)="onAgentClick(item)">
               <div class="col-md-6 col-xs-6">
-                <div class="amount">NPR YTD<br><span currencyMask>{{item.netPermium | currency:'USD':"symbol-narrow":'1.0-0'}}</span></div>
+                <div class="amount">NPR YTD<br><span
+                    currencyMask>{{item.netPermium | currency:'USD':"symbol-narrow":'1.0-0'}}</span></div>
               </div>
               <div class="col-md-6 col-xs-6">
-                <div class="amount">CPL Issued YTD<br><span currencyMask>{{item.cpl | currency:'USD':"symbol-narrow":'1.0-0'}}</span></div>
+                <div class="amount">CPL Issued YTD<br><span currencyMask>{{item.cpl |  number:'1.0-0'}}</span></div>
               </div>
             </div>
           </div>
@@ -41,6 +43,6 @@
     </div>
     <!-- <div id="ratioView">{{totalAndCurrentRowsRatio}}</div> -->
 
-    <button (click)="topFunction()" id="myBtn" title="Go to top"><span class="glyphicon glyphicon-arrow-up"></span></button>
+    <!-- <button (click)="topFunction()" id="myBtn" title="Go to top"><span class="glyphicon glyphicon-arrow-up"></span></button> -->
   </div>
 </div>
