--- a/src/app/views/dashboard/agent-under-plan/agent-under-plan.component.html
+++ b/src/app/views/dashboard/agent-under-plan/agent-under-plan.component.html
@@ -5,7 +5,7 @@
         <div class="col-xs-12 col-md-6 cell-bg">
           <div class="agent-detail">
             <div class="dp">
-              <img src="images/baseline-business-24px.svg" alt="" (click)="onAgentClick(item,i)" />
+              <span class="fontWeightBold">{{i+1}}</span>
               <div class="dpProfile_wp proActiBg">A</div>
             </div>
             <h4 class="topAgentsName"><a (click)="onAgentClick(item)">{{item.name}}</a><span
