--- a/src/app/views/dashboard/agent-with-performance/agent-with-performance.component.html
+++ b/src/app/views/dashboard/agent-with-performance/agent-with-performance.component.html
@@ -5,7 +5,7 @@
         <div class="col-xs-12 col-md-6 cell-bg">
           <div class="agent-detail">
             <div class="dp">
-              <img src="images/baseline-business-24px.svg" alt="" (click)="onAgentClick(item)" />
+              <span class="fontWeightBold">{{i+1}}</span>
               <div class="dpProfile_wp proActiBg">A</div>
             </div>
             <h4 class="topAgentsName"><a (click)="onAgentClick(item)">{{item.name}}</a><span
@@ -59,7 +59,7 @@
     </div>
   </div>
   <!-- <div id="ratioView">{{totalAndCurrentRowsRatio}}</div> -->
-<!-- 
+  <!-- 
   <button (click)="topFunction()" id="myBtn" title="Go to top"><span
       class="glyphicon glyphicon-arrow-up"></span></button> -->
 </div>
