--- a/src/app/views/dashboard/top-agents/top-agents.component.html
+++ b/src/app/views/dashboard/top-agents/top-agents.component.html
@@ -1,12 +1,13 @@
 <div class="container app-bg2">
   <div class="row">
     <ul>
-      <li *ngFor="let item of topAgents">
+      <li *ngFor="let item of topAgents;let i=index">
         <div class="col-xs-12 col-md-6 cell-bg">
           <div class="agent-detail">
             <div class="dp">
-              <img src="../../../../images/baseline-business-24px.svg"
-                onerror="this.src='../../../../images/placeholder.png'" (click)="onAgentClick(item)" />
+              <!-- <img src="../../../../images/baseline-business-24px.svg"
+                onerror="this.src='../../../../images/placeholder.png'" (click)="onAgentClick(item)" /> -->
+                <span class="fontWeightBold">{{i+1}}</span>
               <div class="dpProfile_wp proActiBg">{{item.stat}}</div>
             </div>
             <h4 class="topAgentsName"><a (click)="onAgentClick(item)">{{item.name}}</a>
