--- a/src/app/views/agent/agent-detail/agent-detail.component.html
+++ b/src/app/views/agent/agent-detail/agent-detail.component.html
@@ -8,8 +8,7 @@
         </div>
         <h4>{{agentInfo.name}}<a><img
               src="{{checkEntityFavorite()?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}"
-              alt="" (click)="onStarClick()"></a></h4> <span
-          class="building-icon padding-left-twenty-five">{{agentInfo.entityId}}</span>
+              alt="" (click)="onStarClick()"></a></h4> <span>{{agentInfo.entityId}}</span>
         <div class="clearfix"></div>
       </div>
     </div>
