--- a/src/app/views/dashboard/agent-under-plan/agent-under-plan.component.html
+++ b/src/app/views/dashboard/agent-under-plan/agent-under-plan.component.html
@@ -8,7 +8,7 @@
               <span class="fontWeightBold">{{i+1}}</span>
               <div class="dpProfile_wp proActiBg">A</div>
             </div>
-            <h4 class="topAgentsName"><a (click)="onAgentClick(item)">{{item.name}}</a><span
+            <h4 class="topAgentsName"><a class="building-icon padding-left-twenty-five" (click)="onAgentClick(item)">{{item.name}}</a><span
                 (click)="onAgentClick(item)">
                 ({{item.entityId}})</span>
               <div class="clearfix paddingTop10"></div>
