--- a/src/app/views/dashboard/top-agents/top-agents.component.html
+++ b/src/app/views/dashboard/top-agents/top-agents.component.html
@@ -10,7 +10,7 @@
                 <span class="fontWeightBold">{{i+1}}</span>
               <div class="dpProfile_wp proActiBg">{{item.stat}}</div>
             </div>
-            <h4 class="topAgentsName"><a (click)="onAgentClick(item)">{{item.name}}</a>
+            <h4 class="topAgentsName"><a class="building-icon padding-left-twenty-five" (click)="onAgentClick(item)">{{item.name}}</a>
               <span (click)="onAgentClick(item)"> ({{item.entityId}})</span>
               <div class="clearfix paddingTop10"></div>
               <span>{{getAddress(item)}}</span>
