--- a/src/app/views/person/person-detail/person-detail.component.html
+++ b/src/app/views/person/person-detail/person-detail.component.html
@@ -8,8 +8,7 @@
         </div>
         <h4>{{personInfo.name}}<a><img
               src="{{checkEntityFavorite()?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}"
-              alt="" (click)="onStarClick()"></a></h4> <span
-          class="building-icon padding-left-twenty-five">{{personInfo.entityId}}</span>
+              alt="" (click)="onStarClick()"></a></h4> <span>{{personInfo.entityId}}</span>
         <div class="clearfix"></div>
 
       </div>
