--- a/src/app/views/dashboard/top-agents/top-agents.component.html
+++ b/src/app/views/dashboard/top-agents/top-agents.component.html
@@ -11,9 +11,9 @@
               <div class="dpProfile_wp proActiBg">{{item.stat}}</div>
             </div>
             <h4 class="topAgentsName"><a class="building-icon padding-left-twenty-five" (click)="onAgentClick(item)">{{item.name}}</a>
-              <span (click)="onAgentClick(item)"> ({{item.entityId}})</span>
+              <span (click)="onAgentClick(item)" class="paddingLeft25"> ({{item.entityId}})</span>
               <div class="clearfix paddingTop10"></div>
-              <span>{{getAddress(item)}}</span>
+              <span class="padding-left-twenty-five">{{getAddress(item)}}</span>
             </h4>
             <a class="favouritIconPosition"><img
                 src="{{checkEntityFavorite(item)?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}"
