checking pipeline build

--- a/src/app/views/dashboard/agent-with-performance/agent-with-performance.component.html
+++ b/src/app/views/dashboard/agent-with-performance/agent-with-performance.component.html
@@ -8,9 +8,9 @@
               <span class="fontWeightBold">{{i+1}}</span>
               <div class="dpProfile_wp proActiBg">A</div>
             </div>
-            <h4 class="topAgentsName"><a class="building-icon padding-left-twenty-five" (click)="onAgentClick(item)">{{item.name}}</a><span
-                (click)="onAgentClick(item)" class="paddingLeft25">
-                ({{item.entityId}})</span>
+            <h4 class="topAgentsName"><a class="building-icon padding-left-twenty-five"
+                (click)="onAgentClick(item)">{{item.name}}</a><span (click)="onAgentClick(item)"
+                class="paddingLeft25">({{item.entityId}})</span>
               <div class="clearfix paddingTop10"></div>
               <span class="padding-left-twenty-five">{{getAddress(item)}}</span>
             </h4>
