--- a/src/app/views/dashboard/top-agents/top-agents.component.html
+++ b/src/app/views/dashboard/top-agents/top-agents.component.html
@@ -13,7 +13,7 @@
             <h4 class="topAgentsName"><a class="building-icon padding-left-twenty-five" (click)="onAgentClick(item)">{{item.name}}</a>
               <span (click)="onAgentClick(item)" class="paddingLeft25"> ({{item.entityId}})</span>
               <div class="clearfix paddingTop10"></div>
-              <span class="padding-left-twenty-five">{{getAddress(item)}}</span>
+              <span class="location-icon padding-left-twenty-five">{{getAddress(item)}}</span>
             </h4>
             <a class="favouritIconPosition"><img
                 src="{{checkEntityFavorite(item)?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}"
