--- a/src/app/views/dashboard/agent-with-performance/agent-with-performance.component.html
+++ b/src/app/views/dashboard/agent-with-performance/agent-with-performance.component.html
@@ -1,62 +1,69 @@
 <div class="container app-bg2">
-  <ul>
-    <li *ngFor="let item of agentPerformance; let i = index;">
-      <div class="row">
-        <div class="col-xs-12 col-md-6 cell-bg">
-          <div class="agent-detail">
-            <div class="dp">
-              <span class="fontWeightBold">{{i+1}}</span>
-              <div class="dpProfile_wp proActiBg">A</div>
-            </div>
-            <h4 class="topAgentsName"><a class="building-icon padding-left-twenty-five"
-                (click)="onAgentClick(item)">{{item.name}}</a><span (click)="onAgentClick(item)"
-                class="paddingLeft25">({{item.entityId}})</span>
-              <div class="clearfix paddingTop10"></div>
-              <span class="location-icon padding-left-twenty-five">{{getAddress(item)}}</span>
-            </h4>
-            <a class="favouritIconPosition"><img
-                src="{{checkEntityFavorite(item)?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}"
-                alt="" (click)="onStarClick(item,i)"></a>
-            <div class="clearfix"></div>
-            <div class="row">
-              <div class="col-md-6 col-xs-6">
-                <div class="amount">NPR Annual
-                  Plan<br><span>{{item.nprPlanned| currency:'USD':"symbol-narrow":'1.0-0'}}</span></div>
+  <div class="row" *ngIf="hideNoDataDiv">
+    <ul>
+      <li *ngFor="let item of agentPerformance; let i = index;">
+        <div class="row">
+          <div class="col-xs-12 col-md-6 cell-bg">
+            <div class="agent-detail">
+              <div class="dp">
+                <span class="fontWeightBold">{{i+1}}</span>
+                <div class="dpProfile_wp proActiBg">A</div>
               </div>
-              <div class="col-md-6 col-xs-6">
-                <div class="amount">NPR YTD % of
-                  Annual<br><span>{{item.nprPercent==''?'0':item.nprPercent|number:'1.1-1'}}%</span></div>
-              </div>
-            </div>
-            <div class="clearfix paddingTop10"></div>
-            <div class="row">
-              <div class="col-md-6 col-xs-6">
-                <div class="amount">NPR YTD<br><span> {{item.nprActual| currency:'USD':"symbol-narrow":'1.0-0'}}</span>
+              <h4 class="topAgentsName"><a class="building-icon padding-left-twenty-five"
+                  (click)="onAgentClick(item)">{{item.name}}</a><span (click)="onAgentClick(item)"
+                  class="paddingLeft25">({{item.entityId}})</span>
+                <div class="clearfix paddingTop10"></div>
+                <span class="location-icon padding-left-twenty-five">{{getAddress(item)}}</span>
+              </h4>
+              <a class="favouritIconPosition"><img
+                  src="{{checkEntityFavorite(item)?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}"
+                  alt="" (click)="onStarClick(item,i)"></a>
+              <div class="clearfix"></div>
+              <div class="row">
+                <div class="col-md-6 col-xs-6">
+                  <div class="amount">NPR Annual
+                    Plan<br><span>{{item.nprPlanned| currency:'USD':"symbol-narrow":'1.0-0'}}</span></div>
+                </div>
+                <div class="col-md-6 col-xs-6">
+                  <div class="amount">NPR YTD % of
+                    Annual<br><span>{{item.nprPercent==''?'0':item.nprPercent|number:'1.1-1'}}%</span></div>
                 </div>
               </div>
-              <div class="col-md-6 col-xs-6">
-                <div class="amount">NPR YTD % YTD
-                  Plan<br><span>{{item.nprPercentYTD==''?'0':item.nprPercentYTD|number:'1.1-1'}}%</span></div>
+              <div class="clearfix paddingTop10"></div>
+              <div class="row">
+                <div class="col-md-6 col-xs-6">
+                  <div class="amount">NPR YTD<br><span>
+                      {{item.nprActual| currency:'USD':"symbol-narrow":'1.0-0'}}</span>
+                  </div>
+                </div>
+                <div class="col-md-6 col-xs-6">
+                  <div class="amount">NPR YTD % YTD
+                    Plan<br><span>{{item.nprPercentYTD==''?'0':item.nprPercentYTD|number:'1.1-1'}}%</span></div>
+                </div>
               </div>
-            </div>
-            <div class="clearfix paddingTop10"></div>
-            <div class="row">
-              <div class="col-md-12 col-xs-12">
-                <div class="amount">NPR Plan YTD <span class="fonSize">(Through end of current month)</span>
-                  <br><span> {{item.nprPlannedYTD| currency:'USD':"symbol-narrow":'1.0-0'}}</span></div>
+              <div class="clearfix paddingTop10"></div>
+              <div class="row">
+                <div class="col-md-12 col-xs-12">
+                  <div class="amount">NPR Plan YTD <span class="fonSize">(Through end of current month)</span>
+                    <br><span> {{item.nprPlannedYTD| currency:'USD':"symbol-narrow":'1.0-0'}}</span></div>
+                </div>
               </div>
+              <div class="clearfix paddingTop10"></div>
             </div>
-            <div class="clearfix paddingTop10"></div>
           </div>
         </div>
+      </li>
+    </ul>
+    <div class="row  marginBottom20" *ngIf="moreDataAvailable">
+      <div class="col-xs-12 col-md-12 loadMoreWp">
+        <hr />
+        <div class="loadMore"><a (click)="onLoadMoreClick()" alt="Load More">Load More</a></div>
       </div>
-    </li>
-  </ul>
-  <div class="row  marginBottom20" *ngIf="moreDataAvailable">
-    <div class="col-xs-12 col-md-12 loadMoreWp">
-      <hr />
-      <div class="loadMore"><a (click)="onLoadMoreClick()" alt="Load More">Load More</a></div>
     </div>
+  </div>
+  <div class="serach-emp " *ngIf="!hideNoDataDiv">
+    <h2><em>It is Empty Here!</em></h2>
+    <p><em>Please follow some entity</em></p>
   </div>
   <!-- <div id="ratioView">{{totalAndCurrentRowsRatio}}</div> -->
   <!-- 
