error ui fixing

--- a/src/app/views/dashboard/agent-with-performance/agent-with-performance.component.html
+++ b/src/app/views/dashboard/agent-with-performance/agent-with-performance.component.html
@@ -63,7 +63,7 @@
   </div>
   <div class="serach-emp " *ngIf="!hideNoDataDiv">
     <h2><em>It is Empty Here!</em></h2>
-    <p><em>Please follow some entity</em></p>
+    <p><em>{{errorMsg}}</em></p>
   </div>
   <!-- <div id="ratioView">{{totalAndCurrentRowsRatio}}</div> -->
   <!-- 
