--- a/src/app/views/entity/claims/claims.component.html
+++ b/src/app/views/entity/claims/claims.component.html
@@ -14,7 +14,7 @@
     <app-entity-name-header [entityModel]="entityModel"></app-entity-name-header>
   </div>
 
-  <div class="container app-bg5 bottom-wrapper-for-back">
+  <div class="container app-bg5 bottom-wrapper-for-back" *ngIf="hideNoDataDiv">
     <div class="row marginTop20">
       <ul>
         <li *ngFor="let item of claimsModels" (click)="onClaimSelected(item)">
@@ -40,6 +40,10 @@
       </div>
       <!-- <div id="ratioView">{{totalAndCurrentRowsRatio}}</div> -->
     </div>
+  </div>
+  <div class="serach-emp " *ngIf="!hideNoDataDiv" style="margin-top:100px">
+    <h2><em>It is Empty Here!</em></h2>
+    <p><em>{{errorMsg}}</em></p>
   </div>
 </div>
 <app-claims-filter></app-claims-filter>
