--- a/src/app/views/agent/agent-associates/agent-associates.component.html
+++ b/src/app/views/agent/agent-associates/agent-associates.component.html
@@ -47,5 +47,9 @@
       <!-- <div id="ratioView">{{totalAndCurrentRowsRatio}}</div> -->
     </div>
   </div>
+  <div class="serach-emp " *ngIf="!hideNoDataDiv">
+    <h2><em>It is Empty Here!</em></h2>
+    <p><em>{{errorMsg}}</em></p>
+  </div>
 </div>
 <app-recent-profile-dialog></app-recent-profile-dialog>
