--- a/src/app/views/entity/entity-alert/entity-alert.component.html
+++ b/src/app/views/entity/entity-alert/entity-alert.component.html
@@ -10,7 +10,7 @@
     </div>
     <app-entity-name-header [entityModel]="entityModel"></app-entity-name-header>
   </div>
-  <div class="container app-bg2 bottom-wrapper-for-back">
+  <div class="container app-bg2 bottom-wrapper-for-back" *ngIf="hideNoDataDiv">
     <div class="row marginTop20">
       <ul>
         <li *ngFor="let item of openAlertModels" (click)="onAlertClick(item)">
@@ -33,5 +33,9 @@
       </div>
       <!-- <div id="ratioView">{{totalAndCurrentRowsRatio}}</div> -->
     </div>
+  </div>
+  <div class="serach-emp " *ngIf="!hideNoDataDiv" style="margin-top:100px">
+    <h2><em>It is Empty Here!</em></h2>
+    <p><em>{{errorMsg}}</em></p>
   </div>
 </div>
