added and fix graph

--- a/src/app/views/agent/agent-thirteen-month-activity/agent-thirteen-month-activity.component.html
+++ b/src/app/views/agent/agent-thirteen-month-activity/agent-thirteen-month-activity.component.html
@@ -23,7 +23,13 @@
     <div class="row">
 
       <div style="display: block">
-        <canvas baseChart class="barHeight" [datasets]="barChartData" [colors]="chartColors" [labels]="barChartLabels" [options]="barChartOptions"
+        <canvas baseChart class="barHeight" [datasets]="nprChartData" [colors]="chartColors" [labels]="barChartLabels" [options]="barChartOptions"
+          [legend]="barChartLegend" [chartType]="barChartType">
+        </canvas>
+      </div>
+
+      <div style="display: block">
+        <canvas baseChart class="barHeight" [datasets]="cplChartData" [colors]="chartColors" [labels]="barChartLabels" [options]="barChartOptions"
           [legend]="barChartLegend" [chartType]="barChartType">
         </canvas>
       </div>
