--- a/src/app/views/agent/agent-tags/agent-tags.component.html
+++ b/src/app/views/agent/agent-tags/agent-tags.component.html
@@ -28,15 +28,16 @@
     <div class="row">
       <div class="col-xs-12">
         <div class="form-group">
-          <input type="text" class="form-control pr-38" placeholder="Add private tag for this agent">
+          <input type="text" class="form-control pr-38" placeholder="Add private tag for this agent"
+            [(ngModel)]="newTag" [ngModelOptions]="{standalone: true}">
         </div>
-        <button type="submit" class="btn btn-default add-btn"><img src="../../../../images/add-icon.svg"
-            alt=""></button>
+        <button type="submit" class="btn btn-default add-btn" (click)="onCreateTagClick()"><img
+            src="../../../../images/add-icon.svg" alt=""></button>
       </div>
     </div>
   </div>
 
-  <div class="serach-emp " *ngIf="!hideNoDataDiv" style="margin-top: 50%">
+  <div class="serach-emp " *ngIf="!hideNoDataDiv">
     <h2><em>It is Empty Here!</em></h2>
     <p><em>{{errorMsg}}</em></p>
   </div>
